--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.2/backbone.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
+    <h2>SMS Messages</h2>
+    <section class="ui">
+      <button type="button" id="create">Create SMS</button>
+    </section>
+    <button type="button" id='new' class="btn btn-info">Collection Create</button>
+    <hr>
+    <h4>List of Messages</h4>
+    <hr>
+    <ul class="list">
+
+    </ul>
+
 
   </body>
 </html>
